# rplidar-pico

./: CMakeLists.txt  example.cpp
include/: rplidar.h
scripts/: visualise.py
src/: rplidar.cpp
